<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_search_black_18dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_match"
        android:icon="@drawable/baseline_shuffle_black_18dp"
        android:title="@string/title_match" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/baseline_account_circle_black_18dp"
        android:title="@string/title_account"/>

</menu>
